feedback text-align fixed

--- a/less/style.less
+++ b/less/style.less
@@ -442,12 +442,16 @@ button:focus {
   display: block;
 }
 
+.feedback__col {
+
+}
 .feedback__user {
   float: left;
   margin-top: 200px;
   display: block;
   position: relative;
   width: 1/3*100%;
+  text-align: center;
   padding-left: 84px;
   text-decoration: none;
 }
@@ -462,17 +466,17 @@ button:focus {
 }
 
 .feedback__txt--user01::before{
-  left: 12%;
+  left: 19%;
   background-image: url(../img/reply-01.svg);
 }
 
 .feedback__txt--user02::before{
-  left: 42%;
+  left: 50%;
   background-image: url(../img/reply-02.svg);
 }
 
 .feedback__txt--user03::before{
-  left: 72%;
+  left: 78%;
   background-image: url(../img/reply-03.svg);
 }
 
@@ -655,7 +659,7 @@ footer {
   margin: 0 auto;
   text-align: center;
   padding-top: 20px;
-  padding-bottom: 15px;
+  padding-bottom: 25px;
 }
 
 .footer__vk,
